<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <com.hjaltrans.test3.View_timetable
        android:id="@+id/tt1"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/tt1" />

    <com.hjaltrans.test3.View_timetable
        android:id="@+id/tt2"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/tt2" />
    
    <com.hjaltrans.test3.View_timetable
        android:id="@+id/tt3"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/tt3" />
    
    <com.hjaltrans.test3.View_timetable
        android:id="@+id/tt4"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/tt4" />

</LinearLayout>