<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <fragment
        android:id="@+id/fragment1"
        android:name="com.hjaltrans.test3.Fragment_Origin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/originText" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		<TextView
        	android:id="@+id/tt1h"
        	android:layout_width="50dp"
        	android:layout_height="wrap_content"
        	android:text="@string/tt1h" />
    	<TextView
        	android:id="@+id/tt2h"
        	android:layout_width="80dp"
        	android:layout_height="wrap_content"
        	android:text="@string/tt2h" />
    	<TextView
        	android:id="@+id/tt3h"
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:text="@string/tt3h" />
    	<TextView
        	android:id="@+id/tt4h"
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:text="" />
    </LinearLayout>
    <fragment
        android:id="@+id/fragment2"
        android:name="com.hjaltrans.test3.Fragment_TimeTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
