<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <fragment
        android:id="@+id/fragment_origin"
        android:name="com.hjaltrans.test3.Fragment_Origin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/originText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        	android:id="@+id/textViewh1"
        	android:layout_width="150dp"
        	android:layout_height="20dp"
        	android:text="@string/textView1h" />
        <TextView
        	android:id="@+id/textViewh2"
        	android:layout_width="150dp"
        	android:layout_height="20dp"
        	android:text="@string/textView2h" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragment_destlist"
        android:name="com.hjaltrans.test3.Fragment_DestList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>